--- a/QinYuan/app/src/main/res/layout/activity_login.xml
+++ b/QinYuan/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     tools:context="com.yjh.qinyuan.LoginActivity">
 
     <com.yjh.qinyuan.widget.widget.MyActionBar
@@ -27,6 +28,7 @@
         android:layout_below="@id/title"
         android:layout_marginTop="5dp"
         android:textSize="@dimen/login_text_size"
+        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username"/>
@@ -35,6 +37,8 @@
         android:id="@+id/password"
         android:layout_below="@+id/username"
         android:textSize="@dimen/login_text_size"
+        android:singleLine="true"
+        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"/>
