--- a/QinYuan/app/src/main/res/layout/fragment_around_me.xml
+++ b/QinYuan/app/src/main/res/layout/fragment_around_me.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context="com.yjh.qinyuan.main.aroundme.AroundMeFragment">
 
     <com.baidu.mapapi.map.MapView
