--- a/QinYuan/app/src/main/res/layout/widget_actionbar.xml
+++ b/QinYuan/app/src/main/res/layout/widget_actionbar.xml
@@ -3,87 +3,11 @@
     android:layout_height="wrap_content"
     android:background="@color/white">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/header"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/header_1" />-->
-
-    <!--<ImageButton-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/btn_titlebar_back"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:background="@drawable/btn_more"-->
-        <!--android:visibility="gone"/>-->
-
-    <!--<ImageButton-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/btn_titlebar_right"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:background="@drawable/btn_more"-->
-        <!--android:visibility="gone" />-->
-
-    <!--<com.kiteim.android.widget.HelveticaTextView-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:id="@+id/tv_titlebar_right"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:text="fdsf"-->
-        <!--android:gravity="center"-->
-        <!--android:textSize="20sp"-->
-        <!--android:visibility="gone"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textColor="@color/dark_blue"/>-->
-
-    <!--<com.kiteim.android.widget.HelveticaTextView-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:id="@+id/tv_titlebar_left"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:maxWidth="150dp"-->
-        <!--android:ellipsize="end"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_marginLeft="65dp"-->
-        <!--android:text="fdsf"-->
-        <!--android:gravity="center"-->
-        <!--android:textSize="18sp"-->
-        <!--android:visibility="gone"-->
-        <!--android:singleLine="true"-->
-        <!--android:textStyle="bold"/>-->
-
-    <!--<com.kiteim.android.widget.HelveticaTextView-->
-        <!--android:layout_marginTop="15dp"-->
-        <!--android:id="@+id/tv_titlebar_left_timestamp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_toRightOf="@+id/tv_titlebar_left"-->
-        <!--android:text="20d 10h 6m"-->
-        <!--android:textSize="12sp"-->
-        <!--android:visibility="gone"-->
-        <!--android:drawableLeft="@drawable/icon_chat_time"-->
-        <!--android:drawablePadding="2dp"-->
-        <!--android:gravity="bottom"/>-->
-
-    <!--<ImageButton-->
-        <!--android:id="@+id/btn_search"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginRight="65dp"-->
-        <!--android:background="@drawable/btn_search"-->
-        <!--android:visibility="gone" />-->
+    <com.yjh.qinyuan.widget.widget.HelveticaTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:paddingTop="5dp"
+        android:textSize="@dimen/label_text_size"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
