--- a/QinYuan/app/src/main/res/layout/activity_main.xml
+++ b/QinYuan/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         android:layout_height="match_parent">
 
-        <com.yjh.qinyuan.widget.widget.MyActionBar
+        <com.yjh.qinyuan.widget.MyActionBar
             android:id="@+id/action_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
