--- a/QinYuan/app/src/main/res/values/styles.xml
+++ b/QinYuan/app/src/main/res/values/styles.xml
@@ -47,4 +47,7 @@
         <item name="android:paddingBottom">@dimen/label_padding</item>
     </style>
 
+    <style name="detail_text" parent="label_text">
+        <item name="android:textSize">@dimen/login_text_size</item>
+    </style>
 </resources>
