--- a/QinYuan/app/src/main/res/layout/activity_login.xml
+++ b/QinYuan/app/src/main/res/layout/activity_login.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/background"
     tools:context="com.yjh.qinyuan.LoginActivity">
 
@@ -14,40 +10,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <com.yjh.qinyuan.widget.HelveticaTextView
-        android:id="@+id/title"
-        android:textSize="@dimen/login_text_size"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/action_bar"
-        android:layout_marginTop="20dp"
-        android:text="@string/input_username_and_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <com.yjh.qinyuan.widget.HelveticaEditText
-        android:id="@+id/username"
-        android:layout_below="@id/title"
-        android:layout_marginTop="5dp"
-        android:textSize="@dimen/login_text_size"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/username"/>
+        <com.yjh.qinyuan.widget.HelveticaTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/input_username_and_password"
+            android:textSize="@dimen/login_text_size" />
 
-    <com.yjh.qinyuan.widget.HelveticaEditText
-        android:id="@+id/password"
-        android:layout_below="@+id/username"
-        android:textSize="@dimen/login_text_size"
-        android:singleLine="true"
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/password"/>
+        <com.yjh.qinyuan.widget.HelveticaEditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:layout_marginTop="5dp"
+            android:hint="@string/username"
+            android:singleLine="true"
+            android:textSize="@dimen/login_text_size" />
 
-    <com.yjh.qinyuan.widget.HelveticaButton
-        android:id="@+id/login"
-        android:textSize="@dimen/login_text_size"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:layout_alignParentBottom="true"/>
+        <com.yjh.qinyuan.widget.HelveticaEditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textSize="@dimen/login_text_size" />
+
+        <com.yjh.qinyuan.widget.HelveticaButton
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="@string/login"
+            android:textSize="@dimen/login_text_size" />
+    </RelativeLayout>
 </RelativeLayout>
