--- a/QinYuan/app/src/main/res/layout/activity_tabs.xml
+++ b/QinYuan/app/src/main/res/layout/activity_tabs.xml
@@ -5,8 +5,14 @@
     android:background="@color/background"
     tools:context="com.yjh.qinyuan.main.aroundme.AroundMeActivity">
 
+    <com.yjh.qinyuan.widget.MyActionBar
+        android:id="@+id/action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <FrameLayout
         android:id="@+id/content"
+        android:layout_below="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
