--- a/QinYuan/app/src/main/res/layout/fragment_detail.xml
+++ b/QinYuan/app/src/main/res/layout/fragment_detail.xml
@@ -2,123 +2,119 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <LinearLayout
+        android:id="@+id/simple_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/ic_launcher"
+            android:paddingRight="10dp" />
 
         <RelativeLayout
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/simple_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:paddingRight="10dp"
-                    android:background="@drawable/ic_launcher" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.yjh.qinyuan.widget.HelveticaTextView
-                        android:id="@+id/n_name"
-                        style="@style/detail_text" />
-                    <com.yjh.qinyuan.widget.HelveticaTextView
-                        android:id="@+id/label_phone1"
-                        android:text="@string/phone1"
-                        android:layout_below="@+id/n_name"
-                        style="@style/detail_text" />
-                    <com.yjh.qinyuan.widget.HelveticaTextView
-                        android:id="@+id/phone1"
-                        android:autoLink="phone"
-                        android:layout_below="@+id/n_name"
-                        android:layout_toRightOf="@id/label_phone1"
-                        style="@style/detail_text" />
-                    <com.yjh.qinyuan.widget.HelveticaTextView
-                        android:id="@+id/label_phone2"
-                        android:text="@string/phone2"
-                        android:layout_below="@+id/label_phone1"
-                        style="@style/detail_text" />
-                    <com.yjh.qinyuan.widget.HelveticaTextView
-                        android:id="@+id/phone2"
-                        android:autoLink="phone"
-                        android:layout_below="@+id/label_phone1"
-                        android:layout_toRightOf="@id/label_phone1"
-                        style="@style/detail_text" />
-                </RelativeLayout>
-            </LinearLayout>
+            android:layout_height="wrap_content">
 
             <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/label_contact"
-                android:text="@string/contact"
-                android:layout_below="@+id/simple_item"
-                style="@style/detail_text" />
-            <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/contact"
-                android:layout_below="@+id/simple_item"
-                android:layout_toRightOf="@id/label_contact"
+                android:id="@+id/n_name"
                 style="@style/detail_text" />
 
             <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/label_address"
-                android:text="@string/address"
-                android:layout_below="@+id/label_contact"
-                style="@style/detail_text" />
-            <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/address"
-                android:layout_below="@+id/label_contact"
-                android:layout_toRightOf="@id/label_address"
-                style="@style/detail_text" />
+                android:id="@+id/label_phone1"
+                style="@style/detail_text"
+                android:layout_below="@+id/n_name"
+                android:text="@string/phone1" />
 
             <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/label_category1"
-                android:text="@string/category1"
-                android:layout_below="@+id/address"
-                style="@style/detail_text" />
-            <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/category1"
-                android:layout_below="@+id/label_address"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:layout_toRightOf="@id/label_category1"
-                style="@style/detail_text" />
+                android:id="@+id/phone1"
+                style="@style/detail_text"
+                android:layout_below="@+id/n_name"
+                android:layout_toRightOf="@id/label_phone1"
+                android:autoLink="phone" />
 
             <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/label_category2"
-                android:text="@string/category2"
-                android:layout_below="@+id/label_category1"
-                style="@style/label_text" />
-            <com.yjh.qinyuan.widget.HelveticaTextView
-                android:id="@+id/category2"
-                android:layout_below="@+id/label_category1"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:layout_toRightOf="@id/label_category2"
-                style="@style/label_text" />
+                android:id="@+id/label_phone2"
+                style="@style/detail_text"
+                android:layout_below="@+id/label_phone1"
+                android:text="@string/phone2" />
 
-            <com.baidu.mapapi.map.MapView
-                android:id="@+id/map"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/label_category2"
-                android:layout_width="match_parent"
-                android:layout_height="200dp">
-            </com.baidu.mapapi.map.MapView>
+            <com.yjh.qinyuan.widget.HelveticaTextView
+                android:id="@+id/phone2"
+                style="@style/detail_text"
+                android:layout_below="@+id/label_phone1"
+                android:layout_toRightOf="@id/label_phone1"
+                android:autoLink="phone" />
         </RelativeLayout>
-    </ScrollView>
+    </LinearLayout>
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/label_contact"
+        style="@style/detail_text"
+        android:layout_below="@+id/simple_item"
+        android:text="@string/contact" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/contact"
+        style="@style/detail_text"
+        android:layout_below="@+id/simple_item"
+        android:layout_toRightOf="@id/label_contact" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/label_address"
+        style="@style/detail_text"
+        android:layout_below="@+id/label_contact"
+        android:text="@string/address" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/address"
+        style="@style/detail_text"
+        android:layout_below="@+id/label_contact"
+        android:layout_toRightOf="@id/label_address" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/label_category1"
+        style="@style/detail_text"
+        android:layout_below="@+id/address"
+        android:text="@string/category1" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/category1"
+        style="@style/detail_text"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/label_address"
+        android:layout_toRightOf="@id/label_category1"
+        android:gravity="right" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/label_category2"
+        style="@style/label_text"
+        android:layout_below="@+id/label_category1"
+        android:text="@string/category2" />
+
+    <com.yjh.qinyuan.widget.HelveticaTextView
+        android:id="@+id/category2"
+        style="@style/label_text"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/label_category1"
+        android:layout_toRightOf="@id/label_category2"
+        android:gravity="right" />
+
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_below="@+id/label_category2"
+        android:layout_marginTop="10dp"></com.baidu.mapapi.map.MapView>
 </RelativeLayout>
