--- a/QinYuan/app/src/main/res/layout/tab_user_info.xml
+++ b/QinYuan/app/src/main/res/layout/tab_user_info.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:background="@color/divider"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="5dp">
     <ImageView
         android:id="@+id/image"
         android:layout_gravity="center_horizontal"
