--- a/QinYuan/app/src/main/res/drawable/btn_phone.xml
+++ b/QinYuan/app/src/main/res/drawable/btn_phone.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/ic_call_pressed" android:state_selected="true"/>
     <item android:drawable="@drawable/ic_call_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ic_call_pressed" />
+    <item android:drawable="@drawable/ic_call_normal" />
 </selector>
