--- a/QinYuan/app/src/main/res/layout/activity_detail.xml
+++ b/QinYuan/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,6 @@
             android:id="@+id/image"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:background="@drawable/ic_launcher"
             android:paddingRight="10dp" />
 
         <RelativeLayout
@@ -117,6 +116,12 @@
         android:layout_below="@+id/label_contact"
         android:layout_toRightOf="@id/label_address" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/address"
+        android:background="@color/divider" />
+
     <com.yjh.qinyuan.widget.HelveticaTextView
         android:id="@+id/label_category1"
         style="@style/detail_text"
@@ -127,13 +132,19 @@
         android:id="@+id/category1"
         style="@style/grey_detail_text"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/label_address"
+        android:layout_below="@+id/address"
         android:layout_toRightOf="@id/label_category1"
         android:gravity="right" />
 
-    <com.yjh.qinyuan.widget.HelveticaTextView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/label_category1"
+        android:background="@color/divider" />
+
+        <com.yjh.qinyuan.widget.HelveticaTextView
         android:id="@+id/label_category2"
-        style="@style/label_text"
+        style="@style/detail_text"
         android:layout_below="@+id/label_category1"
         android:text="@string/category2" />
 
@@ -144,6 +155,12 @@
         android:layout_below="@+id/label_category1"
         android:layout_toRightOf="@id/label_category2"
         android:gravity="right" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/label_category2"
+        android:background="@color/divider" />
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/map"
