--- a/QinYuan/app/src/main/res/layout/gallery_image.xml
+++ b/QinYuan/app/src/main/res/layout/gallery_image.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
+    <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
