--- a/QinYuan/app/src/main/res/layout/gallery_image.xml
+++ b/QinYuan/app/src/main/res/layout/gallery_image.xml
@@ -3,8 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <it.sephiroth.android.library.imagezoom.ImageViewTouch
+    <com.yjh.qinyuan.widget.ScaleImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:src="@drawable/sample" />
 </LinearLayout>
