add scale imageview

--- a/QinYuan/app/src/main/res/layout/gallery_image.xml
+++ b/QinYuan/app/src/main/res/layout/gallery_image.xml
@@ -6,6 +6,5 @@
     <com.yjh.qinyuan.widget.ScaleImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/sample" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
